@@ -7,6 +7,7 @@ debsig-verify (0.24) UNRELEASED; urgency=medium
     - Mention OpenPGP instead of gpg in generic code comments.
   * Test suite:
     - Rename .gpg keyrings to .pgp.
+    - Abstract OpenPGP details into debsig_openpgp_* functions.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 20 Mar 2021 01:50:00 +0100
 
